2008-12-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36509
	* Makefile.in (tree-ssa-alias-warnings.o): Remove.
	(tree-ssa-structalias.o): Remove errors.h dependency.
	(tree-ssa-reassoc.o): Likewise.
	* tree-ssa-reassoc.c: Do not include errors.h.
	* tree-ssa-alias-warnings.c: Remove.
	* tree-ssa-alias.c (compute_may_aliases): Remove call to
	strict_aliasing_warning_backend.
	* tree-ssa-structalias.c (emit_pointer_definition): New function.
	(emit_alias_warning): Likewise.
	(set_uids_in_ptset): Warn for clear cases of type-punning.
	* tree-inline.c (remap_gimple_op_r): Preserve TREE_NO_WARNING
	on INDIRECT_REFs.

2008-12-04  Eric Botcazou  <ebotcazou@adacore.com>

	* cse.c (equiv_constant): Fix pasto.

2008-12-04  Nick Clifton  <nickc@redhat.com>

	* config/stormy16/stormy16.md: Remove extraneous spaces and
	quotes.
	* config/stormy16/stormy16.c: Remove extraneous spaces and fix up
	formatting of quotes.

2008-12-04  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/38371
	* fold-const.c (fold_checksum_tree): Allow modification of
	TYPE_NEXT_VARIANT.

2008-12-03  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/38360
	* tree-ssa-ccp.c (ccp_fold_builtin): Bail out if the builtin doesn't
	have the right number of arguments.

2008-12-03  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36326
	* gimplify.c (is_gimple_mem_or_call_rhs): Remove work-around for
	non-BLKmode types.

2008-12-03  Tomas Bily  <tbily@suse.cz>

        PR middle-end/38250
        * tree-loop-distribution.c (build_size_arg): New function.
        (generate_memset_zero): Checks if dr_analyze_innermost succeed.
        Reorganized generating of stmts.
        * testsuite/gcc.dg/tree-ssa/pr38250.c: New file.
        * tree-data-ref.c (dr_analyze_innermost): Returns bool.
        Indicate if analysis succeed.
        * tree-data-ref.h (dr_analyze_innermost): Returns bool.
        * tree-predcom.c (valid_initializer_p, find_looparound_phi):