@@ -1,3 +1,9 @@
+2008-12-04  Eric Botcazou  <ebotcazou@adacore.com>
+            Gary Funck  <gary@intrepid.com>
+
+	* cse.c (lookup_as_function): Delete mode frobbing code.
+	(equiv_constant): Re-implement it there for SUBREGs.
+
 2008-12-04  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/36509
